--- a/ClipUpload4/ClipUpload4.csproj
+++ b/ClipUpload4/ClipUpload4.csproj
@@ -62,6 +62,7 @@
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -100,6 +101,8 @@
     <Compile Include="GlobalHook\WinApi\Keyboard.cs" />
     <Compile Include="GlobalHook\WinApi\KeyboardHookStruct.cs" />
     <Compile Include="GlobalHook\WinApi\Messages.cs" />
+    <Compile Include="Json\Json.cs" />
+    <Compile Include="Json\JsonException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
