Fixed a weird problem with MSBuild failing to get the right file for settings.txt.clean for root app

--- a/ClipUpload4/ClipUpload4.csproj
+++ b/ClipUpload4/ClipUpload4.csproj
@@ -140,7 +140,7 @@
   <ItemGroup>
     <None Include="Key.snk" />
     <None Include="settings.txt.clean">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
