Renamed ClipUpload4 namespace to Clipupload, renamed executable from ClipUpload4.exe to Clipupload.exe, renamed registry entry for startup

--- a/ClipUpload4/ClipUpload4.csproj
+++ b/ClipUpload4/ClipUpload4.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{38B2CAB1-15D9-43C9-B853-ADAE7D4DEF58}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClipUpload4</RootNamespace>
-    <AssemblyName>ClipUpload4</AssemblyName>
+    <RootNamespace>Clipupload</RootNamespace>
+    <AssemblyName>Clipupload</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
