To fix shell extensions and make them work reliably on all machines, all projects are now targeting AnyCPU instead of x86. During extension install, the setup will do its best to make sure that dll's and exe's are not in use by other processes (usually explorer.exe), and handles the unregistration and registration properly. Registration is now done by calling RegAsm.exe followed by srm.exe to ensure it'll work in all cases.
More information can be found here: https://github.com/dwmkerr/sharpshell/issues/71

--- a/Facebook/Facebook.csproj
+++ b/Facebook/Facebook.csproj
@@ -19,7 +19,7 @@
     <OutputPath>..\ClipUpload4\bin\Debug\Addons\Facebook\</OutputPath>
     <DefineConstants>DEBUG;TRACE;SIMPLE_JSON_INTERNAL;SIMPLE_JSON_DYNAMIC;SIMPLE_JSON_DATACONTRACT;SIMPLE_JSON_REFLECTIONEMIT;FLUENTHTTP_URLENCODING;FLUENTHTTP_HTMLENCODING;TPL;FLUENTHTTP_CORE_TPL;</DefineConstants>
     <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
@@ -30,7 +30,7 @@
     <DefineConstants>TRACE;SIMPLE_JSON_INTERNAL;SIMPLE_JSON_DYNAMIC;SIMPLE_JSON_DATACONTRACT;SIMPLE_JSON_REFLECTIONEMIT;FLUENTHTTP_URLENCODING;FLUENTHTTP_HTMLENCODING;TPL;FLUENTHTTP_CORE_TPL;</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
